NIFI-14566 Added Inject Metadata Output Strategy in ConsumeKafka (#9942)
Signed-off-by: David Handermann <exceptionfactory@apache.org>